syntax = "proto3";

package auth;

option go_package = "/grpc_back";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message JwtValidateRequest {
    string token = 1;
}

message JwtValidateResponse {
    string user_id = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc JwtValidate(JwtValidateRequest) returns (JwtValidateResponse);
}
